# guepard_shield

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.cargo/: rust-analyzer.toml
baseline/: analyze.ipynb  baseline.ipynb  baseline_lstm.ipynb  baseline_lstm_embedding.ipynb  baseline_lstm_one_hot.ipynb  baseline_secbert.ipynb  data_prepare.ipynb
common/: Cargo.toml
common/src/: lib.rs
data/: .prettierrc  inject.sh  injectable_server.py  package.json  pnpm-lock.yaml  unique_appender.py
data/query/: boolean-based.txt  error-based.txt  inline.txt  normal.txt  stacked.txt  time-based.txt  union-based.txt
data/src/: dedup.ts  generate.ts  index.ts  unique-appender.ts
data/src/db/: index.ts
data/syscall/: log-old.csv  log.csv  syscall-raw.csv  syscall-table.csv  syscall.csv
ebpf/: Cargo.toml
ebpf/src/: bindings.rs  main.rs
shield/: Cargo.toml
shield/src/: appender.rs  main.rs
user/: Cargo.toml
user/src/: ebpf.rs  main.rs  syscall_tracing.rs
xtask/: Cargo.toml
xtask/src/: bindgen.rs  build_ebpf.rs  main.rs  run.rs
