[tool.poetry]
name = "guepard-shield"
version = "0.1.0"
description = ""
authors = ["Duc Nguyen <duc.nguyen@guepard.run>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = {extras = ["cuda12"], version = "^0.4.34"}
keras = "^3.6.0"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
