[tool.poetry]
name = "guepard-shield"
version = "0.1.0"
description = ""
authors = ["Duc Nguyen <duc.nguyen@guepard.run>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jax = {extras = ["cuda12"], version = "^0.4.34"}
keras = "^3.6.0"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
asyncpg = "^0.29.0"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
transformers = "^4.45.2"
torch = "^2.5.0"
aiofiles = "^24.1.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
