[package]
name = "shield"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.13"
aya-log = "0.2.1"
common = { path = "../common", features = [
  "user",
] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["full"] }
sysinfo = "0.32.0"
chrono = "0.4.38"
tokio-postgres = "0.7.12"
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }

[[bin]]
name = "guepard_shield"
path = "src/main.rs"
